<resources>
    <string name="app_name">HAULLUR</string>
    <string name="username">Rijal</string>
    <string name="desk">Ojo lali lurr,</string>
    <string name="desk2">Narik haul setiap jemuah legi.</string>
    <string name="halo">Halo,</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_detail_artikel_biasa">DetailArtikelBiasaActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="deskripsi_pendaftaran">Haullur adalah program dari Musholla Baiturrahman yang dianjurkan peserta untuk membayar iuran seikhlasnya secara berkala sebelum jumat legi. Tujuannya adalah untuk mendukung keberlangsungan musholla atau kegiatan pembacaan Al - Qur\'an dan mendoakan Almarhum/Almarhumah. Penarikan iuran dilakukan petugas dengan mendatangi rumah peserta dan sesuai jadwal yang ditetapkan yaitu pada hari sebelum jumat legi, dengan pencatatan otomatis dan dapat diakses dengan mudah. Melalui program ini, peserta dapat menikmati berbagai manfaat selama memenuhi anjuran pembayaran iuran seikhlasnya.</string>
    <string name="ketentuan_pendaftaran">Program Haullur ini hanya terbuka bagi peserta yang telah terdaftar, dengan ketentuan setiap peserta dianjurkan membayar iuran seikhlasnya kepada petugas yang mendatangi rumah peserta yang telah terdaftar. Pembayaran harus dilakukan saat ada petugas penarikan, dan halangan atau keterlambatan bisa melakukan iuran pada jumat legi dan saat pembacaan almarhum. Iuran hanya dapat dibayarkan melalui uang tunai. Peserta yang tidak melakukan pembayaran iuran berisiko kehilangan akses atau manfaat dari program ini. Pastikan untuk memahami semua ketentuan sebelum mengikuti program Haullur ini.</string>
    <string name="informasi_pendaftaran">Program Haullur sudah berjalan bertahun - tahun yang diikuti oleh 150+ peserta dari Dusun Randugembolo. Program ini memungkinkan peserta untuk berkontribusi secara berkala melalui pembayaran iuran seikhlasnya, yang nantinya akan digunakan untuk mendukung keberlangsungan fasilitas atau kegiatan tertentu Musholla Baiturrahman. Program ini dirancang untuk memberikan manfaat berkelanjutan kepada peserta, sesuai dengan kontribusi yang mereka berikan.</string>
    <string name="konfirmasi_pendaftaran">Halo! Terima kasih telah mendaftar. Untuk melanjutkan proses program haul, kami mohon konfirmasi keikutsertaan Anda dengan mengirim pesan ini melalui WhatsApp. Jika ada informasi tambahan yang perlu kami ketahui, silakan informasikan juga. Kami tunggu konfirmasi Anda. Terima kasih!</string>
    <string name="kembali_ke_beranda"><u>Kembali ke beranda</u></string>
    <string name="tentang_haullur">Haullur merupakan sistem manajemen program haul yang dilakukan secara rutin sebulan sekali tepatnya pada Jemuah Legi yang diselenggarakan di Musholla Baiturrahman Dusun Randugembolo Desa Ardimulyo Kecamatan Singosari Kabupaten Malang.\n\nRangkaian program haul dimulai dari pendataan almarhum/almarhumah dari perwakilan keluarga almarhum dengan pembayaran iuran seikhlasnya yang ditarik oleh petugas dengan mendatangi rumah keluarga pada hari sebelum jemuah legi atau program haul berjalan. Haul dilaksanakan setelah sholat subuh pada hari kamis sebelum jemuah legi dengan diawali pembacaan almarhum/almarhumah yang mengikuti program haul dilanjutkan dengan Khataman Al - Qur\'an dan ditutup dengan Tahlilan bersama setelah sholat ashar atau ba\'da ashar.\n\nProgram haul sudah berjalan bertahun - tahun yang diikuti oleh 150+ keluarga dari Dusun Randugembolo. Program ini memungkinkan masyarakat untuk berkontribusi secara berkala melalui iuran seikhlasnya, yang nantinya akan digunakan untuk mendukung keberlangsungan fasilitas atau kegiatan terntu Musholla Baiturrahman.</string>
    <string name="visimisi_haullur">Sistem Manajemen Haullur memiliki fungsi untuk menjembatani program haul yang sudah berjalan bertahun - tahun di Musholla Baiturrahman dengan memudahkan pembukuan yang sebelumnya dilakukan secara manual melalui tulis menulis diganti dengan secara otomatis melalui sistem ini.</string>
    <string-array name="list_rt">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>