<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/bg_layout"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingHorizontal="15dp"
            android:gravity="center_vertical">
            <RelativeLayout
                android:id="@+id/button_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/ic_menu" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/button_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/ic_user" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/halo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/halo"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/halo"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desk"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desk2"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginStart="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:baselineAligned="false">
            <RelativeLayout
                android:id="@+id/button_informasi"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_rounded"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@mipmap/ic_informasi" />

                <TextView
                    android:layout_toRightOf="@+id/img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Informasi"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/button_penarikan"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_rounded"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_penarikan"
                    android:padding="10dp"/>

                <TextView
                    android:layout_toRightOf="@+id/img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Penarikan"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:paddingHorizontal="30dp"
            android:baselineAligned="false">
            <RelativeLayout
                android:id="@+id/button_dataalmarhum"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_rounded"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@mipmap/ic_datahaul" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img3"
                    android:text="Data Alm."
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/button_laporan"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_rounded"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img4"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_laporan"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img4"
                    android:text="Laporan"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="10dp">
            <RelativeLayout
                android:id="@+id/button_daftaralmarhum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_daftar_almar"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="15dp">
                <LinearLayout
                    android:id="@+id/text"
                    android:layout_toLeftOf="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_marginEnd="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Daftarkan Alm. Keluarga Anda"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dengan ini semoga almarhum almarhumah mendapatkan tempat terbaik disisi Allah SWT."
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:alpha="0.5"/>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_button_panah_kanan"
                    android:layout_marginEnd="5dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_arrow_right"/>

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Diwoco yo lur"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"/>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/secondary"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:subheaderColor="@color/white"
        android:theme="@style/ThemeOverlay.Material3.NavigationView"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>